# geojsplit

./: .bumpversion.cfg  .gitignore  .readthedocs.yml  .travis.yml  CHANGELOG.md  LICENSE  README.md  environment.yml  pyproject.toml  tox.ini
docs/source/: conf.py  index.rst
docs/source/api/: geojsplit.rst  modules.rst
docs/source/user/: installation.rst  quickstart.rst
geojsplit/: __init__.py  cli.py  geojsplit.py  logging.conf
source/api/: geojsplit.rst
tests/: test_cli.py  test_geojsplit.py
