[tool.poetry]
name = "geojsplit"
version = "0.1.0"
description = "A python implementation of the npm package geojsplit. Used to split GeoJSON files into smaller pieces."
authors = ["Yann-Sebastien Tremblay-Johnston <yanns.tremblay@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
geojson = "^2.5"

[tool.poetry.dev-dependencies]
pytest = "^5.1"
pylint = "^2.3"
black = {version = "^18.3-alpha.0", allows-prereleases = true}
mypy = "^0.720.0"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
