[tool.poetry]
name = "geojsplit"
version = "0.1.0"
description = "A python implementation of the npm package geojsplit. Used to split GeoJSON files into smaller pieces."
authors = ["Yann-Sebastien Tremblay-Johnston <yanns.tremblay@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
geojson = "^2.5"
ijson = "^2.4"
simplejson = "^3.16"

[tool.poetry.dev-dependencies]
pytest = "5.0.1"
pylint = "^2.3"
black = {version = "^18.3-alpha.0", allows-prereleases = true}
mypy = "^0.720.0"
bump2version = "^0.5.11"
pytest-sugar = "^0.9.2"
pytest-cov = "^2.7"
sphinx = "^2.2"
sphinx-rtd-theme = "^0.4.3"

[tool.poetry.scripts]
geojsplit = "geojsplit.cli:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
