[tool.poetry]
name = "geojsplit"
version = "0.1.2"
description = "A python implementation of the npm package geojsplit. Used to split GeoJSON files into smaller pieces."
authors = ["Yann-Sebastien Tremblay-Johnston <yanns.tremblay@gmail.com>"]
readme = "README.md"
repository = "https://github.com/underchemist/geojsplit"
documentation = "https://geojsplit.readthedocs.io/en/latest/"
keywords = ["geospatial", "geojson", "gis", "python", "stream"]
license = "MIT"
classifiers = ["Topic :: Scientific/Engineering :: GIS", "Topic :: Utilities"]

[tool.poetry.dependencies]
python = "^3.6"
geojson = "^2.5"
ijson = "^2.4"
simplejson = "^3.16"
sphinx = {version = "^2.2", optional = true}
sphinx_rtd_theme = {version = "^0.4.3", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^5.0.1"
pylint = "^2.3"
black = {version = "^18.3-alpha.0", allows-prereleases = true}
mypy = "^0.720.0"
bump2version = "^0.5.11"
pytest-sugar = "^0.9.2"
pytest-cov = "^2.7"
coveralls = "^1.8"
tox = "^3.14"

[tool.poetry.extras]
docs = ["sphinx", "sphinx_rtd_theme"]

[tool.poetry.scripts]
geojsplit = "geojsplit.cli:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
